--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		<h1>Iglu <span class='slash'>/</span> Alternativ Quartet</h1>	
 		<nav>
 			<ul>
-				<li><a href='#turneu'>Turneu 2019</a></li>
+				<!-- <li><a href='#turneu'>Turneu 2019</a></li> -->
+				<li><a href='#shop'>Shop</a></li>
 				<li><a href='#download'>Download</a></li>
 				<li><a href='#contact'>Contact</a></li>
 				<li class='separator'></li>
@@ -45,12 +46,20 @@
 
 	<article>
 
-		<!-- Nu uita că te aștept -->
-		<div class='yt'>
-			<iframe src="https://www.youtube.com/embed/aOeZs5SGnKk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-
 		<section>
+			<h2 id='shop'><span>Shop</span></h2>
+			<p>Cumpără lucruri în format fizic — CD-uri, viniluri, tricouri și altele.</p>
+			<a href='https://alternativquartet.bandcamp.com/merch' target='_blank' data-title='Cumpără lucruri' class='linkbtn'>
+				<img src="/img/aq-merch.jpg"/>
+			</a>
+		</section>
+
+		<!-- Nu uita că te aștept -->
+<!-- 		<div class='yt'>
+			<iframe src="https://www.youtube.com/embed/aOeZs5SGnKk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div> -->
+
+		<!-- <section>
 			<h2 id='turneu'><span>Turneu 2019</span></h2>
 
 			<p>Alternativ Quartet revin în 2019 pe scenă, după o pauză de aproape trei ani de zile, pentru un număr restrâns de concerte alături de <a href='https://swarmsandthesun.bandcamp.com/releases'>To the South, Bluebird</a>.</p>
@@ -95,118 +104,179 @@
 					</tr>
 				</tbody>
 			</table>
-		</section>
+		</section> -->
 
 		<section>
 			<h2 id='download'><span>Download</span></h2>
 
-			<div class='album'>
-				<h3>Iglu <span class='slash'>/</span> Stasis</h3>
-				<h4>23 septembrie 2017</h4>
-				<a 
-					class='album__cover' 
-					href='https://s3.eu-central-1.amazonaws.com/alternativquartet/iglu-stasis-mp3.zip'
-				>
-					<img src='/img/albume/iglu-stasis.jpg'/>
-				</a>
+			<div class='grid grid--2'>
+				<div class='album'>
+					<h3>AQ 2008—2013</h3>
+					<h4>29 mai 2019</h4>
+					<a 
+						class='album__cover' 
+						href='https://s3.eu-central-1.amazonaws.com/alternativquartet/iglu-stasis-mp3.zip'
+					>
+						<img src='/img/albume/aq-2008-2013.jpg'/>
+					</a>
 
-				<div class='album__links'>
+					<div class='album__links'>
+
+						<a 
+							class='album__link album__link--bandcamp'
+							href='https://alternativquartet.bandcamp.com/album/stasis'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--apple' 
+							href='https://itunes.apple.com/ro/album/stasis/1446971145'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--spotify'
+							href='https://open.spotify.com/album/5G3w6dT1uUtIT0VZ7eTdtn'
+							target='_blank'
+						></a>
+					</div>
+				</div>
+				<div class='album'>
+					<h3>Iglu <span class='slash'>/</span> Stasis</h3>
+					<h4>23 septembrie 2017</h4>
 					<a 
-						class='album__link album__link--apple' 
-						href='https://itunes.apple.com/ro/album/stasis/1446971145'
-						target='_blank'
-					></a>
-					<a 
-						class='album__link album__link--spotify'
-						href='https://open.spotify.com/album/5G3w6dT1uUtIT0VZ7eTdtn'
-						target='_blank'
-					></a>
+						class='album__cover' 
+						href='https://s3.eu-central-1.amazonaws.com/alternativquartet/iglu-stasis-mp3.zip'
+					>
+						<img src='/img/albume/iglu-stasis.jpg'/>
+					</a>
+
+					<div class='album__links'>
+						<a 
+							class='album__link album__link--bandcamp'
+							href='https://alternativquartet.bandcamp.com/album/stasis'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--apple' 
+							href='https://itunes.apple.com/ro/album/stasis/1446971145'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--spotify'
+							href='https://open.spotify.com/album/5G3w6dT1uUtIT0VZ7eTdtn'
+							target='_blank'
+						></a>
+					</div>
 				</div>
 			</div>
 
-			<div class='album'>
-				<h3>Când nu cânt</h3>
-				<h4>10 decembrie 2012</h4>
-				<a 
-					class='album__cover' 
-					href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'
-				>
-					<img src='/img/albume/cand-nu-cant.jpg'/>
-				</a>
+			<div class='grid grid--4'>
 
-				<div class='album__links'>
+				<div class='album album--secondary'>
+					<h3>Când nu cânt</h3>
+					<h4>10 decembrie 2012</h4>
 					<a 
-						class='album__link album__link--apple'
-						href='https://itunes.apple.com/ro/album/c%C3%A2nd-nu-c%C3%A2nt/1446084870'
-						target='_blank'
-					></a>
-					<a 
-						class='album__link album__link--spotify'
-						href='https://open.spotify.com/album/70zJlxetV8fHMPfRIC4xEY'
-						target='_blank'
-					></a>
+						class='album__cover' 
+						href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cand-nu-cant-mp3.zip'
+					>
+						<img src='/img/albume/cand-nu-cant.jpg'/>
+					</a>
+
+					<div class='album__links'>
+
+						<a 
+							class='album__link album__link--bandcamp'
+							href='https://alternativquartet.bandcamp.com/album/c-nd-nu-c-nt'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--apple'
+							href='https://itunes.apple.com/ro/album/c%C3%A2nd-nu-c%C3%A2nt/1446084870'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--spotify'
+							href='https://open.spotify.com/album/70zJlxetV8fHMPfRIC4xEY'
+							target='_blank'
+						></a>
+					</div>
 				</div>
-			</div>
 
-			<div class='album'>
-				<h3>Cânt nu când EP</h3>
-				<h4>10 decembrie 2012</h4>
-				<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>
-					<img src='/img/albume/cant-nu-cand.jpg'/>
-				</a>
+				<div class='album album--secondary'>
+					<h3>Cânt nu când EP</h3>
+					<h4>10 decembrie 2012</h4>
+					<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-cant-nu-cand-ep-mp3.zip'>
+						<img src='/img/albume/cant-nu-cand.jpg'/>
+					</a>
 
-				<div class='album__links'>
-					<a 
-						class='album__link album__link--apple'
-						href='https://itunes.apple.com/ro/album/c%C3%A2nt-nu-c%C3%A2nd/1446084917'
-						target='_blank'
-					></a>
-					<a 
-						class='album__link album__link--spotify'
-						href='https://open.spotify.com/album/4ePMy6FUiknHOPxZ96uRSI'
-						target='_blank'
-					></a>
+					<div class='album__links'>
+						<a 
+							class='album__link album__link--bandcamp'
+							href='https://alternativquartet.bandcamp.com/album/c-nt-nu-c-nd'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--apple'
+							href='https://itunes.apple.com/ro/album/c%C3%A2nt-nu-c%C3%A2nd/1446084917'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--spotify'
+							href='https://open.spotify.com/album/4ePMy6FUiknHOPxZ96uRSI'
+							target='_blank'
+						></a>
+					</div>
 				</div>
-			</div>
 
-			<div class='album'>
-				<h3>Aripi</h3>
-				<h4>15 mai 2011</h4>
-				<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>
-					<img src='/img/albume/aripi.jpg'/>
-				</a>
+				<div class='album album--secondary'>
+					<h3>Aripi</h3>
+					<h4>15 mai 2011</h4>
+					<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-aripi-mp3.zip'>
+						<img src='/img/albume/aripi.jpg'/>
+					</a>
 
-				<div class='album__links'>
-					<a 
-						class='album__link album__link--apple'
-						href='https://itunes.apple.com/ro/album/aripi/1447303981'
-						target='_blank'
-					></a>
-					<a 
-						class='album__link album__link--spotify'
-						href='https://open.spotify.com/album/6crkwQox4an7Qrz3tKyRTP'
-						target='_blank'
-					></a>
+					<div class='album__links'>
+
+						<a 
+							class='album__link album__link--bandcamp'
+							href='https://alternativquartet.bandcamp.com/album/aripi'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--apple'
+							href='https://itunes.apple.com/ro/album/aripi/1447303981'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--spotify'
+							href='https://open.spotify.com/album/6crkwQox4an7Qrz3tKyRTP'
+							target='_blank'
+						></a>
+					</div>
 				</div>
-			</div>
 
 
-			<div class='album'>
-				<h3>Liniștea astupă goluri</h3>
-				<h4>30 august 2010</h4>
-				<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'><img src='/img/albume/linistea-astupa-goluri.jpg'/></a>
+				<div class='album album--secondary'>
+					<h3>Liniștea astupă goluri</h3>
+					<h4>30 august 2010</h4>
+					<a class='album__cover' href='https://s3.eu-central-1.amazonaws.com/alternativquartet/aq-linistea-astupa-goluri-mp3.zip'><img src='/img/albume/linistea-astupa-goluri.jpg'/></a>
 
-				<div class='album__links'>
-					<a 
-						class='album__link album__link--apple'
-						href='https://itunes.apple.com/ro/album/lini%C8%99tea-astup%C4%83-goluri/1446082711'
-						target='_blank'
-					></a>
-					<a 
-						class='album__link album__link--spotify'
-						href='https://open.spotify.com/album/5D5hE12gRDb8AtDHiaV3wO'
-						target='_blank'
-					></a>
+					<div class='album__links'>
+						<a 
+							class='album__link album__link--bandcamp'
+							href='https://alternativquartet.bandcamp.com/album/lini-tea-astup-goluri'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--apple'
+							href='https://itunes.apple.com/ro/album/lini%C8%99tea-astup%C4%83-goluri/1446082711'
+							target='_blank'
+						></a>
+						<a 
+							class='album__link album__link--spotify'
+							href='https://open.spotify.com/album/5D5hE12gRDb8AtDHiaV3wO'
+							target='_blank'
+						></a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -237,15 +307,24 @@
 			<h2 id='colaboratori'><span>Colaboratori și prieteni</span></h2>
 
 			<ul>
+				<li>No.3 — requiescat in pace</li>
 				<li><a href='https://www.facebook.com/ClujNapocaRocknRoll/'>Cluj–Napoca Rock ’n’ Roll</a></li>
 				<li><a href='http://definite.ro/'>Definite Rock</a></li>
+				<li><a href='https://rockpepaine.ro'>Rock pe pâine</a></li>
 				<li><a href='https://www.facebook.com/fluturipeasfalt/'>Fluturi pe asfalt</a></li>
 				<li><a href='https://www.facebook.com/Navamama/'>Nava Mamă</a></li>
-				<li><a href='https://www.facebook.com/pinholes.zmei/'>Pinholes</a></li>
-				<li><a href=' https://www.facebook.com/fleshrodeo/'>Flesh Rodeo</a></li>
 				<li><a href='https://www.facebook.com/tothesouthbluebird/'>To the South, Bluebird</a></li>
+				<li><a href='https://www.facebook.com/pinholes.zmei/'>Pinholes</a></li>
+				<li><a href='https://www.facebook.com/MethadoneSkies/'>Methadone Skies</a></li>
+				<li><a href='https://www.facebook.com/egocentricsband/'>The :Egocentrics</a></li>
+				<li><a href='https://www.facebook.com/valerinneofficial/'>Valerinne</a></li>
+				<li><a href='https://www.facebook.com/fleshrodeo/'>Flesh Rodeo</a></li>
+				<li><a href='https://www.facebook.com/mountainsonmyback/'>Mountains on my Back</a></li>
+				<li><a href='https://www.facebook.com/FrontBand/'>Front</a></li>
 				<li><a href='https://www.facebook.com/aburelius'>Marcus Aburelius</a></li>
 				<li><a href='https://www.facebook.com/LunaAmaraBand/'>Luna Amară</a></li>
+				<li><a href='https://byronmusic.ro'>Byron</a></li>
+				<li><a href='https://facebook.com/kummband'>Kumm</a></li>
 				<li><a href='https://www.facebook.com/luna.recording.studio/'>Luna Studios</a></li>
 				<li><a href='http://www.colorsoundstudio.com/mastering-studio-paris.html'>Color Sound Mastering</a></li>
 				<li><a href='https://handlewithcare.international/'>Handle With Care</a></li>
