Comment section: collaborators

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 			<p><a href='tel:+40744627235'>+40744627235</a><br><a href='mailto:alternativquartet@gmail.com'>alternativquartet@gmail.com</a></p>
 		</section>
 
-		<section>
+<!-- 		<section>
 			<h2 id='colaboratori'><span>Colaboratori și prieteni</span></h2>
 
 			<ul>
@@ -331,7 +331,7 @@
 				<li><a href='http://www.knipsolina.de/'>una.knipsolina</a></li>
 				<li><a href='http://lucianindrei.ro/'>Lucian Indrei</a></li>
 			</ul>
-		</section>
+		</section> -->
 	</article>
 
 	<footer>
