--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 	<!-- Twitter/Facebook/Slack -->
 
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://alternativquartet.ro" />
+	<meta property="og:url" content="https://alternativquartet.ro" />
 	<meta property="og:title" content="Iglu / Alternativ Quartet" />
 	<meta property="og:description" content="Noul album de la Iglu și discografia AQ, disponibile acum pe alternativquartet.ro" />
-	<meta property="og:image" content="http://alternativquartet.ro/img/iglu-cover-fb-2.png" />
+	<meta property="og:image" content="https://alternativquartet.ro/img/iglu-cover-fb-2.png" />
 	 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:domain" value="alternativquartet.ro" />
 	<meta name="twitter:title" value="Iglu / Alternativ Quartet" />
 	<meta name="twitter:description" value="Noul album de la Iglu și discografia AQ, disponibile acum pe alternativquartet.ro" />
-	<meta name="twitter:image" content="http://alternativquartet.ro/img/iglu-cover-fb-2.png" />
-	<meta name="twitter:url" value="http://alternativquartet.ro/" />
+	<meta name="twitter:image" content="https://alternativquartet.ro/img/iglu-cover-fb-2.png" />
+	<meta name="twitter:url" value="https://alternativquartet.ro/" />
 
 	<title>Iglu / Alternativ Quartet</title>
 </head>
@@ -38,8 +38,8 @@
 				<li><a href='#download'>Download</a></li>
 				<li><a href='#contact'>Contact</a></li>
 				<li class='separator'></li>
-				<li><a href='http://fb.com/alternativquartet' target='_blank'>Facebook</a></li>
-				<li><a href='http://youtube.com/aqlag' target='_blank'>YouTube</a></li>
+				<li><a href='https://fb.com/alternativquartet' target='_blank'>Facebook</a></li>
+				<li><a href='https://youtube.com/aqlag' target='_blank'>YouTube</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -335,7 +335,7 @@
 	</article>
 
 	<footer>
-		AQLAG <span class='dagger'>‡</span> 2008&ndash;2020
+		AQLAG <span class='dagger'>‡</span> 2008&ndash;2021
 	</footer>
 	
 	<script>
